# mvee

./: .gitignore  README.md  car.hs  ellipsoid.cabal  ellipsoid.hs  khachiyan.hs
src/Data/: Ellipsoid.hs
src/Data/Ellipsoid/: .Experiment.hs.swp  Experiment.hs
src/Data/Ellipsoid/Examples/: Car.hs
