name:          ellipsoid
category:      Data, Math
version:       0.0.1
license:       AllRightsReserved
cabal-version: >= 1.8
author:        Justin Holmgren
maintainer:    Justin Holmgren <justin.holmgren@gmail.com>
stability:     experimental
homepage:      http://github.com/jnhnum1/mvee
bug-reports:   http://github.com/jnhnum1/mvee/issues
build-type:    Simple

Executable carExperiment
  build-depends: transformers,
    mtl,
    hmatrix,
    gnuplot,
    base,
    lens,
    random
  main-is: Data/Ellipsoid/Experiment.hs
  hs-source-dirs: src
